--- a/portfolio.html
+++ b/portfolio.html
@@ -366,6 +366,32 @@
               </li>
             </ul>
           </div>
+          <div class="newsletter-section">
+            <h3 class="sign-newsletter">zapisz się do newsletttera</h3>
+            <div class="newsletter-wrapper">
+              <div class="newsletter-item">
+                <form>
+                  <label class="email-footer" for="email">
+                    <input
+                    class="email-footer-description"
+                      type="text"
+                      name="mail"
+                      id="mail"
+                      placeholder="E-mail"
+                    />
+                  </label>
+                </form>
+              </div>
+              <div class="newsletter-item">
+                <button class="button-footer" type="submit">
+                  Zapisz się
+                  <svg width="24" height="24" class="footer-icon">
+                    <use href="./images/icons.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
