--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                     <input
                     class="email-footer-description"
                       type="text"
-                      name="mail"
+                      name="email"
                       id="mail"
                       placeholder="E-mail"
                     />
